--- a/index.html
+++ b/index.html
@@ -34,14 +34,25 @@
             padding-bottom: 5px;
         }
         .leaderboard {
-            max-width: 1000px; /* Increased width to accommodate the preview */
+            max-width: 1000px; 
             margin: 40px auto;
             border: 1px solid #e0e0e0;
             border-radius: 6px;
             overflow: hidden;
         }
+        /* Styles for the linkable row */
+        .result-link {
+            text-decoration: none; /* Remove underline from the anchor tag */
+            color: inherit; /* Inherit text color */
+            display: block;
+        }
+        .result-link:hover .result-row {
+            background-color: #f0f8ff; /* Light blue hover effect */
+            cursor: pointer;
+        }
+
         .header-row, .result-row {
-            /* Adjusted grid layout to make room for the preview */
+            /* Adjusted grid layout */
             display: grid;
             grid-template-columns: 0.3fr 1fr 3fr 0.8fr 0.8fr 1.5fr; 
             padding: 12px 15px;
@@ -113,7 +124,8 @@
         <div class="header-row">
             <div class="rank">#</div>
             <div class="provider">Provider / Model</div>
-            <div class="preview-text-header">Response Preview</div> <div class="speed">Speed (s)</div>
+            <div class="preview-text-header">Response Preview</div>
+            <div class="speed">Speed (s)</div>
             <div class="status">Status</div>
             <div class="action-button">Action</div>
         </div>
@@ -149,6 +161,9 @@
         function formatResults(results) {
             let html = '';
             results.forEach((item, index) => {
+                // Creates a URL-friendly slug, e.g., "openai-gpt-4o-mini"
+                const modelSlug = (item.provider + '-' + item.model).toLowerCase().replace(/[^a-z0-9-]+/g, '-');
+                
                 let statusClass = item.status === 'Online' ? 'status-online' : 'status-error';
                 let speedClass = item.time < 1.0 ? 'speed-fast' : (item.time < 5.0 ? 'speed-medium' : '');
 
@@ -162,21 +177,25 @@
                     }
                 }
                 
-                // Combining Provider and Model into one cell
                 const providerModel = `
                     <div style="font-weight: 600;">${item.provider}</div>
                     <div style="font-size: 0.85em; color: #777;">${item.model}</div>
                 `;
 
+                // --- NEW LINKABLE ROW STRUCTURE ---
                 html += `
-                    <div class="result-row">
-                        <div class="rank">${index + 1}</div>
-                        <div class="provider">${providerModel}</div>
-                        <div class="preview-text">${item.response_preview}</div> <div class="speed ${speedClass}">${item.time}s</div>
-                        <div class="status ${statusClass}">${item.status}</div>
-                        <div class="action-button">${affiliateButton}</div>
-                    </div>
+                    <a href="#${modelSlug}" class="result-link">
+                        <div class="result-row" id="${modelSlug}">
+                            <div class="rank">${index + 1}</div>
+                            <div class="provider">${providerModel}</div>
+                            <div class="preview-text">${item.response_preview}</div>
+                            <div class="speed ${speedClass}">${item.time}s</div>
+                            <div class="status ${statusClass}">${item.status}</div>
+                            <div class="action-button">${affiliateButton}</div>
+                        </div>
+                    </a>
                 `;
+                // ---------------------------------
             });
             return html;
         }
