--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         }
         
         .header-row, .result-link {
-            /* FINAL GRID ADJUSTMENT */
+            /* Final Grid Sizing */
             display: grid;
-            /* Column sizing: Rank, Provider (more room), Preview (more room), Speed, Status, Action (sweet spot) */
             grid-template-columns: 0.3fr 1.2fr 3.1fr 0.8fr 0.8fr 1.7fr; 
-            padding: 12px 15px;
+            padding: 12px 15px; /* Sets row height */
             border-bottom: 1px solid #eeeeee;
-            align-items: center;
+            /* FIX 1: Ensures content aligns to the center of the vertical space */
+            align-items: center; 
             font-size: 14px;
             text-decoration: none; 
             color: inherit; 
@@ -77,7 +77,12 @@
             color: #555;
             font-size: 0.9em;
         }
-        .speed, .status { /* Explicitly align these columns */
+        /* FIX 3: Make speed more pronounced */
+        .speed { 
+            text-align: center;
+            font-size: 1.1em;
+        }
+        .status { 
             text-align: center;
         }
         .speed-fast {
@@ -184,8 +189,9 @@
                     }
                 }
                 
+                // FIX 2: Added a clean wrapper div to ensure the entire cell content aligns consistently (top-align).
                 const providerModelContent = `
-                    <div style="font-weight: 600;">${item.provider}</div>
+                    <div style="font-weight: 600; padding-top: 5px;">${item.provider}</div>
                     <div style="font-size: 0.85em; color: #777;">${item.model}</div>
                 `;
 
