--- a/index.html
+++ b/index.html
@@ -936,8 +936,8 @@
                     <div class="advertise-subtitle">Reach engaged developers & AI practitioners</div>
                 </div>
             </div>
-            <a href="/cdn-cgi/l/email-protection#0a6e6463666d63794a6d676b63662469656735797f68606f697e374b6e7c6f787e637963646d2a65642a48584b434b442a597a6f6f6e2a43646e6f72" class="advertise-contact">
-                CONTACT: <span class="__cf_email__" data-cfemail="44202a2d28232d37042329252d286a272b29">[email&#160;protected]</span>
+            <a href="mailto:dnilgis@gmail.com?subject=Advertising%20on%20BRAIAN%20Speed%20Index" class="advertise-contact">
+                CONTACT: dnilgis@gmail.com
             </a>
         </div>
     </div>
@@ -1195,7 +1195,7 @@
  ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝╚═╝  ╚═══╝
 ═══════════════════════════════════════════════════════════
         </div>
-        <p>A <a href="/cdn-cgi/l/email-protection#75161a1b01141601351707141c141c1b5b161a18">dnilgis</a> PROJECT // v2.1</p>
+        <p>A <a href="mailto:dnilgis@gmail.com">dnilgis</a> PROJECT // v2.1</p>
         <p style="color: var(--text-dim); margin-top: 15px;">
             DISCLAIMER: Data provided for informational purposes only. Performance may vary. 
             All trademarks are property of their respective owners.
@@ -1205,7 +1205,7 @@
         </p>
     </footer>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+    <script>
         // FALLBACK DATA (Updated with latest benchmark results)
         const FALLBACK_DATA = {
             "last_updated": "2024-12-03 23:40:00 UTC",
