--- a/index.html
+++ b/index.html
@@ -1022,9 +1022,9 @@
                     <div class="advertise-subtitle">Reach engaged developers & AI practitioners</div>
                 </div>
             </div>
-            <a href="/cdn-cgi/l/email-protection#284c4641444f415b684f45494144064b4745175b5d4a424d4b5c15694c5e4d5a5c415b41464f0d1a1847460d1a186a7a696169660d1a187b584d4d4c0d1a1861464c4d50" class="advertise-contact">
-                CONTACT: <a href="/cdn-cgi/l/email-protection#9afef4f3f6fdf3e9dafdf7fbf3f6b4f9f5f7" class="advertise-link"><span class="__cf_email__" data-cfemail="cda9a3a4a1aaa4be8daaa0aca4a1e3aea2a0">[email&#160;protected]</span></a>
-            </a>
+            <div class="advertise-contact">
+                CONTACT: <a href="mailto:dnilgis@gmail.com" style="color: var(--text-primary); text-decoration: underline;">dnilgis@gmail.com</a>
+            </div>
         </div>
     </div>
 
@@ -1286,7 +1286,7 @@
  ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝╚═╝  ╚═══╝
 ═══════════════════════════════════════════════════════════
         </div>
-        <p>A <a href="/cdn-cgi/l/email-protection#c2a6acabaea5abb182a5afa3abaeeca1adaf">dnilgis</a> PROJECT // v2.1</p>
+        <p>A dnilgis PROJECT // v2.1</p>
         <p style="color: var(--text-dim); margin-top: 15px;">
             DISCLAIMER: Data provided for informational purposes only. Performance may vary. 
             All trademarks are property of their respective owners.
@@ -1296,7 +1296,7 @@
         </p>
     </footer>
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+    <script>
         // FALLBACK DATA (Updated with latest benchmark results)
         const FALLBACK_DATA = {
             "last_updated": "2024-12-03 23:40:00 UTC",
@@ -1716,3 +1716,11 @@
         }
 
         // Initialize on page load
+        document.addEventListener('DOMContentLoaded', async () => {
+            console.log(">> BRAIAN SPEED INDEX INITIALIZING");
+            await fetchData();
+            console.log(">> SYSTEM READY");
+        });
+    </script>
+</body>
+</html>
