--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
         }
         
         footer a:hover {
-            text-decoration: underline;
+            text-decoration: none;
         }
         
         /* MOBILE */
@@ -1013,7 +1013,7 @@
                 </div>
             </div>
             <div class="advertise-contact">
-                CONTACT: <a href="mailto:dnilgis@gmail.com" style="color: var(--text-primary); text-decoration: underline;">dnilgis@gmail.com</a>
+                CONTACT: <a href="mailto:dnilgis@gmail.com" style="color: var(--text-primary); text-decoration: none;">dnilgis@gmail.com</a>
             </div>
         </div>
     </div>
@@ -1344,7 +1344,7 @@
  ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝╚═╝  ╚═══╝
 ═══════════════════════════════════════════════════════════
         </div>
-        <p>A <a href="mailto:dnilgis@gmail.com" style="color: var(--text-primary); text-decoration: underline;">dnilgis</a> PROJECT // v2.2</p>
+        <p>A <a href="mailto:dnilgis@gmail.com" style="color: var(--text-primary); text-decoration: none;">dnilgis</a> PROJECT // v2.2</p>
         <p style="color: var(--text-dim); margin-top: 15px;">
             DISCLAIMER: Data provided for informational purposes only. Performance may vary. 
             All trademarks are property of their respective owners.
