--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,34 @@
         <!-- TEST PROMPT -->
         <div class="info-block">
             <h2>Test Prompt</h2>
-            <p style="background: rgba(0, 255, 65, 0.05); padding: 15px; border-left: 3px solid var(--text-primary); font-family: monospace; white-space: pre-wrap;" id="prompt-display">Loading prompt...</p>
+            <p style="color: var(--text-dim); font-size: 0.85em; margin-bottom: 10px; font-style: italic;">
+                ℹ️ This is the current test prompt. It will automatically update from the latest benchmark run.
+            </p>
+            <p style="background: rgba(0, 255, 65, 0.05); padding: 15px; border-left: 3px solid var(--text-primary); font-family: monospace; white-space: pre-wrap; line-height: 1.6;" id="prompt-display">You are tasked with analyzing the evolution of artificial intelligence from 2010 to 2025. Your response must be comprehensive and well-structured.
+
+PART 1 - HISTORICAL ANALYSIS (2010-2025):
+Identify and explain the THREE most transformative breakthroughs in AI during this period. For each breakthrough:
+- Describe the core technical innovation
+- Explain why it was a paradigm shift (not just incremental progress)
+- Analyze its broader impact on AI capabilities and applications
+- Provide specific examples of what became possible after this breakthrough
+
+PART 2 - ARCHITECTURAL COMPARISON:
+Compare and contrast deep learning architectures versus transformer architectures:
+- Explain the fundamental architectural differences
+- Discuss why transformers became dominant for language tasks despite deep learning's earlier success in vision
+- Analyze the specific technical limitations that deep learning hit for NLP
+- Explain the key innovations in transformers (attention mechanism, positional encoding, etc.) that solved these limitations
+- Compare computational efficiency and scalability between the two approaches
+
+PART 3 - FUTURE PREDICTION:
+Based on current trends and technological trajectories, predict the next major AI breakthrough likely to occur post-2025:
+- Provide THREE specific, defensible technical reasons supporting your prediction
+- Explain what current limitations this breakthrough would address
+- Propose a realistic timeline with justification
+- Discuss potential obstacles that could delay or prevent this breakthrough
+
+Your response should demonstrate deep technical understanding, logical reasoning, and the ability to synthesize complex information. Aim for 2500-3500 characters with clear structure and specific technical details.</p>
         </div>
 
         <!-- TEST PARAMETERS -->
