--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@ RESPONSIVENESS (20%):
         </div>
 
         <div class="disclaimer-box">
-            <strong>DISCLAIMER:</strong> Results are based on live API calls from US-East servers. Performance may vary by region. We are not affiliated with any provider.
+            <strong>DISCLAIMER:</strong> Results are based on live API calls from US-Wisconsin servers. Performance may vary by region. We are not affiliated with any provider.
         </div>
     </div>
 
