--- a/index.html
+++ b/index.html
@@ -151,6 +151,21 @@
         .hud-label { color: var(--text-muted); font-size: 0.7rem; letter-spacing: 1px; font-family: 'Orbitron'; }
         .hud-value { color: #fff; font-family: 'Rajdhani'; font-weight: 700; font-size: 1.1rem; }
 
+        /* === AD BANNER === */
+        .ad-banner {
+            margin: 25px auto; padding: 15px 25px;
+            border: 1px dashed var(--border-color); 
+            background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,255,65,0.05) 50%, rgba(0,0,0,0) 100%);
+            display: flex; justify-content: space-between; align-items: center; gap: 20px;
+        }
+        .ad-text { font-size: 1rem; color: #fff; font-family: 'Orbitron', sans-serif; letter-spacing: 1px; font-weight: bold; }
+        .act-btn { 
+            display: inline-block; padding: 8px 18px; font-size: 0.85rem; font-weight: bold; 
+            border: 1px solid var(--neon-green); color: var(--neon-green); text-decoration: none; 
+            background: rgba(0,255,65,0.05); transition: 0.2s; font-family: 'Orbitron', sans-serif;
+        }
+        .act-btn:hover { background: var(--neon-green); color: #000; box-shadow: 0 0 10px var(--neon-dim); }
+
         /* === CONTROLS === */
         .controls-bar {
             background: var(--bg-panel); border: 1px solid var(--border-color);
